compiler/tools/fpp-check/test/numeric_shift/shift_invalid_type_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/numeric_shift/shift_invalid_type_error.fpp:1.14
constant a = "x" << 2
             ^
error: string is not an integer or enum type
